Closed Bug 1588788 Opened 6 years ago Closed 6 years ago

Variable font kerning: kerning deltas not applied when one uses font-weight, as opposed to font-variation-settings

Categories

(Core :: Layout: Text and Fonts, defect, P3)

69 Branch
All
Unspecified
defect

Tracking

()

RESOLVED FIXED
mozilla72
Tracking Status
firefox72 --- fixed

People

(Reporter: madigens, Assigned: jfkthame)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:69.0) Gecko/20100101 Firefox/69.0

Steps to reproduce:

This is a by-product of https://bugs.chromium.org/p/chromium/issues/detail?id=1003746. Follow the steps to reproduce there but use "font-weight: 900;" instead of "font-variation-settings: 'wght' 900;".

Actual results:

Kerning Variation deltas are not applied (glyphs barely move).

Expected results:

Kerning Variation deltas are applied (glyphs crash into each other on purpose).

(Oh, forgot to mention: testing this on Windows 10)

Hi @madigens, tested on Windows 10 - using FF builds: release 69.0.3, nightly 71.0a1 =>cannot reproduce the issue.
Further, I will add a component if isn't the right one please fell free to change it.
Regards,
Liviu

Component: Untriaged → Layout: Text and Fonts
Product: Firefox → Core

Confirmed reproducible with Nightly on macOS.

(Liviu, note that the STR described in the Chromium report includes downloading and using a specific test font - if you missed this, it wouldn't reproduce.)

Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P3
Hardware: Unspecified → All

The bug here occurs because we just pass the list of values from font-variation-settings directly to harfbuzz shaping, but fail to incorporate any values that should be set based on separate properties like font-weight.

Pushed by jkew@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c1a405056197 Pass the correct variation settings to harfbuzz shaping, including any derived from font-weight/-stretch/-style properties. r=lsalzman
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
Assignee: nobody → jfkthame

Thanks for fixing this!

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: