Bug 1588788 - Pass the correct variation settings to harfbuzz shaping, including any derived from font-weight/-stretch/-style properties. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D50830

--HG--
extra : moz-landing-system : lando